public/style.css
.Header {
  max-width: 600px;
}

.Game {
  width: 100%;
  max-width: 600px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.BoardContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  overflow: hidden;
  padding-top: 60px; /* height of header */
}

.Board {
  /* Note: grid-template-columns is handled programmatically in Elm land */
  display: grid;
  grid-gap: 5px;
  padding: 10px;
  box-sizing: border-box;
  width: 80%;
  max-width: 350px;
  max-height: 454px;
}

.BoardRow {
  /* Note: grid-template-columns is handled programmatically in Elm land */
  display: grid;
  grid-gap: 5px;
}

.BoardTile {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  font-weight: 500;
  font-size: 1.5rem;
  line-height: 1.5rem;
  user-select: none;
  padding: unset;
}

.BoardTile::before {
  content: '';
  display: inline-block;
  padding-bottom: 100%;
}

.Keyboard {
  display: flex;
  flex-direction: column;
  gap: 4px;
  margin: 4px 10px 10px 10px;
  user-select: none;
}

.KeyboardRow {
  display : flex;
  justify-content: space-evenly;
  gap: 4px;
}

.KeyboardKey {
  flex: 1;
  height: 7vh;
  padding: 0.5rem 0.25rem;
}

.KeyboardKey:active,
.KeyboardKey:focus {
  box-shadow: none;
}

.EndGameButtons {
  width: calc(100% - 20px);
  margin: 4px 10px 0 10px;
}

.Flash {
  position: absolute;
  top: 8%;
  left: 50%;
  transform: translate(-50%, 0);
  pointer-events: none;
  width: fit-content;
}

.Markdown p:last-child {
  margin-bottom: 0;
}

@media screen and (prefers-color-scheme: dark) {
  .btn-close {
    filter: invert(1);
  }
}

